# ts-gettext-extractor

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile.toml  README.md  RELEASE.md  main.rs  package.json  parser.rs  pot.rs  visitor.rs  walker.rs
.github/workflows/: build.yaml  cd.yaml  ci.yaml  lint.yaml  release.yaml  test.yaml
tests/expected-output/: default.pot  draw.pot  duplicates.pot  test.pot  typescript.pot
tests/src/: index.jsx  test.copy.ts  test.ts
