[package]
name = "ts-gettext-extractor"
version = "0.0.1"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
indicatif = "0.17.8"
pathdiff = "0.2.1"
swc_atoms = "0.6.7"
swc_common = { version = "0.33.26", features = ["tty-emitter"] }
swc_ecma_ast = "0.113.1"
swc_ecma_parser = { version = "0.144.1", features = ["typescript", "swc_ecma_visit"] }
swc_ecma_visit = { version = "0.99.1", features = [] }
walkdir = "2"

[[bin]]
name = "ts-gettext-extractor"
path = "main.rs"

[dev-dependencies]
pretty_assertions = "1.4.0"
